:sparkles: Correct spacing in photos

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -121,8 +121,6 @@
 .top-products-container__item{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-decoration: none;
   color: black;
 }
@@ -413,7 +411,7 @@
 }
 
 .enterate__container__info{
-  max-width: 360px;
+  max-width: 400px;
   display:flex;
   flex-direction: column;
   gap:15px;
@@ -435,8 +433,8 @@
 }
 
 .enterate__container__item__picture__image{
-  width: 360px;
-  height: auto;
+  width: 400px;
+  height: 400px!important;
   object-fit: cover;
 }
 
